LangC_HolderFolder/LangC_SourceCode/LangC_Capstone/obj/Debug/ALGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.1-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Christian\LangC_Capstone\LangC_HolderFolder\LangC_SourceCode\LangC_Capstone\Grammars\ALGrammar.g4 by ANTLR 4.1-SNAPSHOT
namespace LangC_Capstone.Grammars {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.1-SNAPSHOT")]
public partial class ALGrammarParser : Parser {
	public const int
		T__15=1, T__14=2, T__13=3, T__12=4, T__11=5, T__10=6, T__9=7, T__8=8, 
		T__7=9, T__6=10, T__5=11, T__4=12, T__3=13, T__2=14, T__1=15, T__0=16, 
		ProgramHeader=17, VariableHeader=18, MethodHeader=19, AND=20, ARRAY=21, 
		AS=22, BEGIN=23, BREAK=24, CASE=25, CATCH=26, CONSTANTLY=27, CONTINUE=28, 
		DO=29, ELSE=30, END=31, EXIT=32, FILE=33, FINALLY=34, FOR=35, FUNCTION=36, 
		IF=37, IN=38, IS=39, LET=40, OR=41, PROGRAM=42, SET=43, SWITCH=44, THIS=45, 
		TRY=46, UNIMPLEMENTED=47, WHILE=48, IntegerLiteral=49, FloatingPointLiteral=50, 
		BooleanLiteral=51, CharacterLiteral=52, StringLiteral=53, NullLiteral=54, 
		LPAREN=55, RPAREN=56, LBRACK=57, RBRACK=58, SEMI=59, COMMA=60, DOT=61, 
		ASSIGN=62, GT=63, LT=64, BANG=65, TILDE=66, QUESTION=67, COLON=68, EQUAL=69, 
		LE=70, GE=71, NOTEQUAL=72, INC=73, DEC=74, ADD=75, SUB=76, MUL=77, DIV=78, 
		BITAND=79, BITOR=80, CARET=81, MOD=82, QUOTE=83, ADD_ASSIGN=84, SUB_ASSIGN=85, 
		MUL_ASSIGN=86, DIV_ASSIGN=87, AND_ASSIGN=88, OR_ASSIGN=89, XOR_ASSIGN=90, 
		MOD_ASSIGN=91, LSHIFT_ASSIGN=92, RSHIFT_ASSIGN=93, URSHIFT_ASSIGN=94, 
		Identifier=95, VariableIdentifier=96, AL_Letter=97, AL_LetterOrDigit=98, 
		WS=99, COMMENT=100, LINE_COMMENT=101;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'double'", "'}'", "'boolean'", "'float'", "'char'", "'long'", 
		"'short'", "'default'", "'int'", "'void'", "'{'", "':end program:'", "'byte'", 
		"'return'", "'&&'", "':start program:'", "':alproject:'", "':variables:'", 
		"':methods:'", "'and'", "'array'", "'as'", "'begin'", "'break'", "'case'", 
		"'catch'", "'constantly'", "'continue'", "'do'", "'else'", "'end'", "'exit'", 
		"'file'", "'finally'", "'for'", "'function'", "'if'", "'in'", "'is'", 
		"'let'", "'||'", "'program'", "'set'", "'switch'", "'this'", "'try'", 
		"'unimplemented'", "'while'", "IntegerLiteral", "FloatingPointLiteral", 
		"BooleanLiteral", "CharacterLiteral", "StringLiteral", "'null'", "'('", 
		"')'", "'['", "']'", "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", 
		"'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'++'", "'--'", "'+'", 
		"'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'\"'", "'+='", "'-='", 
		"'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='", 
		"Identifier", "VariableIdentifier", "AL_Letter", "AL_LetterOrDigit", "WS", 
		"COMMENT", "LINE_COMMENT"
	};
	public const int
		RULE_program = 0, RULE_programDeclaration = 1, RULE_mainProgram = 2, RULE_methodDeclaration = 3, 
		RULE_methodBody = 4, RULE_block = 5, RULE_blockStatement = 6, RULE_statement = 7, 
		RULE_switchBlockStatementGroup = 8, RULE_switchLabel = 9, RULE_forControl = 10, 
		RULE_forInit = 11, RULE_enhancedForControl = 12, RULE_forUpdate = 13, 
		RULE_parExpression = 14, RULE_expressionList = 15, RULE_statementExpression = 16, 
		RULE_constantExpression = 17, RULE_formalParameters = 18, RULE_formalParameterList = 19, 
		RULE_formalParameter = 20, RULE_variableDeclarators = 21, RULE_variableDeclaration = 22, 
		RULE_variableDeclarationID = 23, RULE_variableInitialization = 24, RULE_expression = 25, 
		RULE_primary = 26, RULE_literal = 27, RULE_type = 28, RULE_primitiveType = 29;
	public static readonly string[] ruleNames = {
		"program", "programDeclaration", "mainProgram", "methodDeclaration", "methodBody", 
		"block", "blockStatement", "statement", "switchBlockStatementGroup", "switchLabel", 
		"forControl", "forInit", "enhancedForControl", "forUpdate", "parExpression", 
		"expressionList", "statementExpression", "constantExpression", "formalParameters", 
		"formalParameterList", "formalParameter", "variableDeclarators", "variableDeclaration", 
		"variableDeclarationID", "variableInitialization", "expression", "primary", 
		"literal", "type", "primitiveType"
	};

	public override string GrammarFileName { get { return "ALGrammar.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }


		protected const int EOF = Eof;

	public ALGrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ProgramDeclarationContext programDeclaration() {
			return GetRuleContext<ProgramDeclarationContext>(0);
		}
		public ITerminalNode ProgramHeader() { return GetToken(ALGrammarParser.ProgramHeader, 0); }
		public MethodDeclarationContext methodDeclaration(int i) {
			return GetRuleContext<MethodDeclarationContext>(i);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return GetRuleContext<VariableDeclarationContext>(i);
		}
		public ITerminalNode MethodHeader() { return GetToken(ALGrammarParser.MethodHeader, 0); }
		public ITerminalNode VariableHeader() { return GetToken(ALGrammarParser.VariableHeader, 0); }
		public IReadOnlyList<MethodDeclarationContext> methodDeclaration() {
			return GetRuleContexts<MethodDeclarationContext>();
		}
		public MainProgramContext mainProgram() {
			return GetRuleContext<MainProgramContext>(0);
		}
		public IReadOnlyList<VariableDeclarationContext> variableDeclaration() {
			return GetRuleContexts<VariableDeclarationContext>();
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_program; }
		public override void EnterRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IALGrammarVisitor<TResult> typedVisitor = visitor as IALGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			_la = _input.La(1);
			if (_la==ProgramHeader) {
				{
				State = 60; Match(ProgramHeader);
				}
			}

			State = 63; programDeclaration();
			State = 65;
			_la = _input.La(1);
			if (_la==VariableHeader) {
				{
				State = 64; Match(VariableHeader);
				}
			}

			State = 70;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==LET) {
				{
				{
				State = 67; variableDeclaration();
				}
				}
				State = 72;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 74;
			_la = _input.La(1);
			if (_la==MethodHeader) {
				{
				State = 73; Match(MethodHeader);
				}
			}

			State = 79;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==FUNCTION) {
				{
				{
				State = 76; methodDeclaration();
				}
				}
				State = 81;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 83;
			_la = _input.La(1);
			if (_la==16) {
				{
				State = 82; mainProgram();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgramDeclarationContext : ParserRuleContext {
		public ITerminalNode QUOTE(int i) {
			return GetToken(ALGrammarParser.QUOTE, i);
		}
		public IReadOnlyList<ITerminalNode> QUOTE() { return GetTokens(ALGrammarParser.QUOTE); }
		public ITerminalNode Identifier() { return GetToken(ALGrammarParser.Identifier, 0); }
		public ITerminalNode PROGRAM() { return GetToken(ALGrammarParser.PROGRAM, 0); }
		public ITerminalNode THIS() { return GetToken(ALGrammarParser.THIS, 0); }
		public ProgramDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_programDeclaration; }
		public override void EnterRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.EnterProgramDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.ExitProgramDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IALGrammarVisitor<TResult> typedVisitor = visitor as IALGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgramDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramDeclarationContext programDeclaration() {
		ProgramDeclarationContext _localctx = new ProgramDeclarationContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_programDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(THIS);
			State = 86; Match(PROGRAM);
			State = 87; Match(QUOTE);
			State = 88; Match(Identifier);
			State = 89; Match(QUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MainProgramContext : ParserRuleContext {
		public IReadOnlyList<BlockStatementContext> blockStatement() {
			return GetRuleContexts<BlockStatementContext>();
		}
		public BlockStatementContext blockStatement(int i) {
			return GetRuleContext<BlockStatementContext>(i);
		}
		public MainProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_mainProgram; }
		public override void EnterRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.EnterMainProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.ExitMainProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IALGrammarVisitor<TResult> typedVisitor = visitor as IALGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMainProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainProgramContext mainProgram() {
		MainProgramContext _localctx = new MainProgramContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_mainProgram);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91; Match(16);
			State = 95;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 14) | (1L << BEGIN) | (1L << BREAK) | (1L << CONTINUE) | (1L << DO) | (1L << FOR) | (1L << IF) | (1L << LET) | (1L << SWITCH) | (1L << WHILE) | (1L << IntegerLiteral) | (1L << FloatingPointLiteral) | (1L << BooleanLiteral) | (1L << CharacterLiteral) | (1L << StringLiteral) | (1L << NullLiteral) | (1L << LPAREN) | (1L << SEMI))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (BANG - 65)) | (1L << (TILDE - 65)) | (1L << (INC - 65)) | (1L << (DEC - 65)) | (1L << (ADD - 65)) | (1L << (SUB - 65)) | (1L << (Identifier - 65)) | (1L << (VariableIdentifier - 65)))) != 0)) {
				{
				{
				State = 92; blockStatement();
				}
				}
				State = 97;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 98; Match(12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodDeclarationContext : ParserRuleContext {
		public MethodBodyContext methodBody() {
			return GetRuleContext<MethodBodyContext>(0);
		}
		public ITerminalNode FUNCTION() { return GetToken(ALGrammarParser.FUNCTION, 0); }
		public FormalParametersContext formalParameters() {
			return GetRuleContext<FormalParametersContext>(0);
		}
		public ITerminalNode Identifier() { return GetToken(ALGrammarParser.Identifier, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_methodDeclaration; }
		public override void EnterRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.EnterMethodDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.ExitMethodDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IALGrammarVisitor<TResult> typedVisitor = visitor as IALGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodDeclarationContext methodDeclaration() {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_methodDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(FUNCTION);
			State = 103;
			switch (_input.La(1)) {
			case 1:
			case 3:
			case 4:
			case 5:
			case 6:
			case 7:
			case 9:
			case 13:
				{
				State = 101; type();
				}
				break;
			case 10:
				{
				State = 102; Match(10);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 105; Match(Identifier);
			State = 106; formalParameters();
			State = 109;
			switch (_input.La(1)) {
			case BEGIN:
				{
				State = 107; methodBody();
				}
				break;
			case SEMI:
				{
				State = 108; Match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodBodyContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public MethodBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_methodBody; }
		public override void EnterRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.EnterMethodBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.ExitMethodBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IALGrammarVisitor<TResult> typedVisitor = visitor as IALGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodBodyContext methodBody() {
		MethodBodyContext _localctx = new MethodBodyContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_methodBody);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; block();
			State = 112; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public IReadOnlyList<BlockStatementContext> blockStatement() {
			return GetRuleContexts<BlockStatementContext>();
		}
		public BlockStatementContext blockStatement(int i) {
			return GetRuleContext<BlockStatementContext>(i);
		}
		public ITerminalNode BEGIN() { return GetToken(ALGrammarParser.BEGIN, 0); }
		public ITerminalNode END() { return GetToken(ALGrammarParser.END, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_block; }
		public override void EnterRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IALGrammarListener typedListener = listener as IALGrammarListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IALGrammarVisitor<TResult> typedVisitor = visitor as IALGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(BEGIN);
			State = 118;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 14) | (1L << BEGIN) | (1L << BREAK) | (1L << CONTINUE) | (1L << DO) | (1L << FOR) | (1L << IF) | (1L << LET) | (1L << SWITCH) | (1L << WHILE) | (1L << IntegerLiteral) | (1L << FloatingPointLiteral) | (1L << BooleanLiteral) | (1L << CharacterLiteral) | (1L << StringLiteral) | (1L << NullLiteral) | (1L << LPAREN) | (1L << SEMI))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (BANG - 65)) | (1L << (TILDE - 65)) | (1L << (INC - 65)) | (1L << (DEC - 65)) | (1L << (ADD - 65)) | (1L << (SUB - 65)) | (1L << (Identifier - 65)) | (1L << (VariableIdentifier - 65)))) != 0)) {
				{
				{
				State = 115; blockStatement();
				}
				}
				State = 120;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 121; Match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
